fix page border on small phone

--- a/css/style.css
+++ b/css/style.css
@@ -104,10 +104,10 @@ footer a {
     }
 
     #wrapper {
-        width: 100%
+        width: 99%
     }
 
     footer {
-        padding: 0;
+        padding: 0 1px;
     }
 }
